--- a/DealHack/css/login.css
+++ b/DealHack/css/login.css
@@ -2,18 +2,40 @@
     width:100%;
     margin: 0 auto;
 }
+.limiter.open{
+    display:block;
+}
 
-.login-container{
+
+
+.container{
     width:100%;
     min-height: 100vh;
-    display:flex;
     flex-wrap: wrap;
+    display:none;
     justify-content:center;
     align-items: center;
     padding:15px;
     background:white;
 }
-.wrap-login{
+
+.container.active{
+    display:flex;
+}
+
+
+
+
+.wrap{
+    width: 400px;
+    background:white;
+    border-radius: 10px;
+    overflow: hidden;
+    padding:77px 55px 33px;
+    -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.1);
+}
+
+.wrap-sign-up{
     width: 400px;
     background:white;
     border-radius: 10px;
@@ -25,7 +47,22 @@
 .login-form{
     width: 100%;
 }
+
+.sign-up-form{
+    width: 100%;
+}
+
+
 .login-form-title{
+    display: block;
+    font-family: Poppins-Bold;
+    font-size: 30px;
+    color: black;
+    line-height: 1.2;
+    text-align: center;
+
+}
+.sign-up-form-title{
     display: block;
     font-family: Poppins-Bold;
     font-size: 30px;
@@ -62,7 +99,23 @@
     padding-top:13px;
 }
 
+.sign-up-container-form-btn{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content:center;
+    padding-top:13px;
+}
+
 .wrap-login-form-btn{
+    width:100%;
+    display: block;
+    position: relative;
+    z-index: 1;
+    border-radius: 25px;
+    overflow: hidden;
+    margin:0 auto;
+}
+.wrap-sign-up-form-btn{
     width:100%;
     display: block;
     position: relative;
@@ -80,10 +133,19 @@
     left: -100%;
     transition:all .4s;
 }
+.sign-up-form-bgbtn{
+    position:absolute;
+    z-index: -1;
+    width:300%;
+    background-image: -webkit-linear-gradient(right, #21d4fd,#b721ff,#21d4fd,#b721ff);
+    top: 0;
+    left: -100%;
+    transition:all .4s;
+}
 .login-form-btn{
     font-family: Poppins-Medium;
     font-size:15px;
-    color:white;
+    color: black;
     line-height:1.2;
     text-transform: uppercase;
     display:flex;
@@ -94,3 +156,47 @@
     height:50px;
 
 }
+
+.sign-up-form-btn{
+    font-family: Poppins-Medium;
+    font-size:15px;
+    color: black;
+    line-height:1.2;
+    text-transform: uppercase;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    padding:0 20px;
+    width:100%;
+    height:50px;
+
+}
+
+.text-center{
+    text-align: center;
+}
+
+.p-t-115{
+    padding-top: 115px;
+}
+
+.txt1 {
+    font-family: Poppins-Regular;
+    font-size: 13px;
+    color: #666666;
+    line-height: 1.5;
+}
+
+.txt2 {
+    font-family: Poppins-Regular;
+    font-size: 13px;
+    color: #333333;
+    line-height: 1.5;
+    text-decoration: underline;
+}
+
+.switch{
+
+    cursor: pointer;
+}
+
